updating to Cosmos/0761f5016

--- a/index-1.html
+++ b/index-1.html
@@ -1,11 +1,7 @@
 <html>
-
-<head>
-</head>
-
+<head></head>
 <body>
   <p>A chat is coming soon!</p>
 </body>
 <script src="./index.js"></script>
-
 </html>
