--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
     <input id="message" type="text" />
     <button id="send">send</button>
   </body>
-  <script src="./index.js" type="text/javascript"></script>
+  <script src="./index.js" type="module"></script>
 </html>
